# salvium-js

./: NOTICE  README.md  debug-carrot-output.js  index.js  mine-testnet.js  mine-worker.js  package.json  setup.bat  setup.sh
.github/workflows/: ci.yml  release.yml
crates/salvium-crypto/: Cargo.toml
crates/salvium-crypto/src/: elligator2.rs  lib.rs
crates/salvium-miner/: Cargo.toml
src/: address.js  base58.js  blake2b.js  blockchain.js  bulletproofs_plus.js  carrot-scanning.js  carrot.js  consensus.js  constants.js  ed25519.js  index.js  keccak.js  mnemonic.js  multisig-carrot.js  scanning.js  signature.js  subaddress.js  transaction.js  wallet-store.js  wallet-sync.js  wallet.js
src/crypto/: backend-js.js  index.js  (+2 more)
test/: all.js  audit-transaction.test.js  bidirectional-test.js  blake2b.test.js  blockchain.test.js  bulletproofs_plus.test.js  carrot-self-test.js  carrot-sync-test.js  check-spent.js  clsag-test.js  consensus-helpers.test.js  convert-integration.test.js  convert-transaction.test.js  cross-fork-tx.test.js  crypto-provider.test.js  debug-burn.js  debug-tx.js  dynamic-block-size.test.js  find-bad-walletsync.js  fractional-transfers.js  hf-transfer-test.js  integration-subaddress.test.js  integration-sync.test.js  integration-transfer.test.js  keys.test.js  mnemonic.test.js  multisig-carrot.test.js  quick-carrot-test.js  rpc.test.js  run.js  stake-transaction.test.js  subaddress.test.js  sweep-consolidate.js  tclsag-test.js  test-harness.js  testnet.test.js  transaction-parser.test.js  transaction.test.js  verify-x25519.js  wallet-class.test.js  (+3 more)
(+32 files in other folders)
